--- a/app/src/main/res/layout/fragment_list.xml
+++ b/app/src/main/res/layout/fragment_list.xml
@@ -5,6 +5,13 @@
     android:layout_height="match_parent"
     android:background="#ffff7663">
 
+<android.support.v7.widget.RecyclerView
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
+    android:id="@+id/rv"
+    android:minHeight="50dp">
+
+</android.support.v7.widget.RecyclerView>
 
     <TextView
         android:layout_width="wrap_content"
@@ -13,8 +20,6 @@
         android:id="@+id/textView"
         android:layout_gravity="center"
         android:textColor="#ff140612"/>
-
-
 
 
 </LinearLayout>
