--- a/app/src/main/res/layout/shopping_list_element.xml
+++ b/app/src/main/res/layout/shopping_list_element.xml
@@ -25,6 +25,12 @@
             android:text="Развернуть"
             android:id="@+id/btn_shopping_list_expand"
             android:layout_weight="1"/>
+        <Button
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Edit"
+            android:id="@+id/btn_edit"
+            android:layout_weight="1"/>
 
     </LinearLayout>
     <android.support.v7.widget.RecyclerView
