--- a/app/src/main/res/layout/shopping_list_item_element.xml
+++ b/app/src/main/res/layout/shopping_list_item_element.xml
@@ -11,14 +11,15 @@
         android:layout_height="wrap_content"
         android:id="@+id/btn_icon"
         android:layout_weight="1"/>
-    <TextView
+    <EditText
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:textColor="@color/primaryFont"
         android:text="Название элемента"
         android:textSize="20dp"
         android:id="@+id/tv_item_name"
-        android:layout_weight="3"/>
+        android:layout_weight="3"
+        android:singleLine="true"/>
     <CheckBox
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
