--- a/app/src/main/res/layout/shopping_list_item_element.xml
+++ b/app/src/main/res/layout/shopping_list_item_element.xml
@@ -19,7 +19,8 @@
         android:textSize="20dp"
         android:id="@+id/tv_item_name"
         android:layout_weight="3"
-        android:singleLine="true"/>
+        android:singleLine="true"
+        />
     <CheckBox
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
