swap items, added amount item

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -10,22 +10,11 @@
 
     android:orientation="vertical">
 
-
-
-
-
-
-
-
-
-
-
-
         <android.support.design.widget.AppBarLayout
             android:id="@+id/abl_toolbar"
             android:layout_height="wrap_content"
             android:layout_width="match_parent"
-            android:background="#fff555">
+            android:background="@color/mainActivityBackground">
 
             <android.support.v7.widget.Toolbar
                 android:id="@+id/toolbar"
@@ -51,11 +40,6 @@
 
 
         </android.support.design.widget.AppBarLayout>
-
-
-
-
-
 
     <android.support.v4.widget.DrawerLayout
         android:id="@+id/drawer_layout"
