--- a/app/src/main/res/layout/shopping_list_edit_fragment.xml
+++ b/app/src/main/res/layout/shopping_list_edit_fragment.xml
@@ -4,35 +4,19 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
-    <LinearLayout
+    <EditText
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:orientation="horizontal">
-
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:id="@+id/tv_shopping_list_name"
-            android:text="Shoppping list name"
-            android:textColor="#111111"
-            android:layout_weight="5"/>
-
-        <Button
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:background="#29ca47"
-            android:id="@+id/btn_add"
-            android:text="+"
-            android:layout_weight="1"/>
-
-
-    </LinearLayout>
+        android:layout_height="40dp"
+        android:id="@+id/ed_shopping_list_name"
+        android:textColor="@color/primaryFont"
+        android:hint="Новый список"
+        android:singleLine="true"/>
 
     <android.support.v7.widget.RecyclerView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:id="@+id/rv_edit_items"
-        android:background="#fff555">
+        android:background="@color/editFragmentBackground">
 
     </android.support.v7.widget.RecyclerView>
 
