--- a/app/src/main/res/layout/shopping_list_element.xml
+++ b/app/src/main/res/layout/shopping_list_element.xml
@@ -7,19 +7,30 @@
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:background="#fff555"
+        android:background="@color/itemListBackground"
         android:id="@+id/linear_layout_shopping_list">
-
-        <EditText
+        <LinearLayout
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:id="@+id/et_shopping_list_name"
-            android:text="new Shopping list"
-            android:textColor="@android:color/black"
-            android:textSize="20dp"
-            android:layout_weight="3"
-            android:singleLine="true"
-            />
+            android:orientation="vertical">
+
+             <EditText
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:id="@+id/et_shopping_list_name"
+                android:text="new Shopping list"
+                android:textColor="@android:color/black"
+                android:textSize="20dp"
+                android:layout_weight="3"
+                android:singleLine="true" />
+            <TextView
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:id="@+id/total_checked"
+                android:hint="1/1"
+                android:textColor="@color/primaryFont"/>
+
+        </LinearLayout>
         <Button
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
@@ -38,7 +49,7 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:id="@+id/rv_shopping_list_items"
-        android:background="#77ffc0"
+        android:background="@color/rvItemsBackground"
         >
 
     </android.support.v7.widget.RecyclerView>
