--- a/app/src/main/res/layout/shopping_list_fragment.xml
+++ b/app/src/main/res/layout/shopping_list_fragment.xml
@@ -3,7 +3,7 @@
     android:orientation="vertical"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="#ffff7663">
+    android:background="@color/mainFragmentBackground">
 
 <android.support.v7.widget.RecyclerView
     android:layout_width="wrap_content"
