--- a/app/src/main/res/layout/shopping_list_item_element.xml
+++ b/app/src/main/res/layout/shopping_list_item_element.xml
@@ -2,32 +2,63 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:orientation="horizontal"
     android:layout_width="match_parent"
-    android:layout_height="80dp"
-    android:background="@android:color/holo_blue_bright"
-    android:minHeight="80dp">
+    android:layout_height="wrap_content"
+    android:background="@color/itemBackground"
+    android:minHeight="60dp"
+    android:layout_marginBottom="2dp"
+    android:layout_marginTop="2dp"
+    android:weightSum="12">
 
     <Button
-        android:layout_width="wrap_content"
+        android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:id="@+id/btn_icon"
-        android:layout_weight="1"/>
+        android:layout_weight="1"
+        android:visibility="gone" />
+
     <EditText
-        android:layout_width="wrap_content"
+        android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:textColor="@color/primaryFont"
-        android:text="Название элемента"
         android:textSize="20dp"
         android:id="@+id/tv_item_name"
-        android:layout_weight="3"
+        android:layout_weight="7"
         android:singleLine="true"
+        android:longClickable="true"
         />
+
+
+    <LinearLayout
+        android:layout_width="0dp"
+        android:layout_height="match_parent"
+        android:layout_weight="4">
+    <Button
+        android:layout_width="40dp"
+        android:layout_height="wrap_content"
+        android:id="@+id/btn_minus"
+        android:text="-"
+        android:textSize="20dp"/>
+
+    <EditText
+        android:layout_width="40dp"
+        android:layout_height="wrap_content"
+        android:id="@+id/numberPicker"
+        android:inputType="numberDecimal"
+        android:orientation="horizontal"/>
+
+    <Button
+        android:layout_width="40dp"
+        android:layout_height="wrap_content"
+        android:id="@+id/btn_plus"
+        android:text="+"
+        android:textSize="20dp"/>
+    </LinearLayout>
     <CheckBox
-        android:layout_width="wrap_content"
+        android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:id="@+id/checkbox_item"
-        android:background="#fff111"
-        android:layout_weight="1"/>
-
-
+        android:background="@color/checkBoxBackground"
+        android:layout_weight="1"
+        />
 
 </LinearLayout>
