--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -4,4 +4,16 @@
     <color name="colorPrimaryDark">#303F9F</color>
     <color name="colorAccent">#FF4081</color>
     <color name="primaryFont">#111111</color>
+    <color name="itemBackground">@android:color/holo_blue_bright</color>
+    <color name="itemBackgroundChecked">#c4f4e8</color>
+    <color name="itemListBackground">#4edc41</color>
+    <color name="itemListBackgroundChecked">#abf1a4</color>
+    <color name="mainFragmentBackground">#f9fcc1</color>
+    <color name="editFragmentBackground">#eac0f1</color>
+    <color name="rvItemsBackground">#78f5d6</color>
+    <color name="checkBoxBackground">#f4f072</color>
+    <color name="mainActivityBackground">#fff555</color>
+
+
+
 </resources>
