--- a/app/src/main/res/layout/shopping_list_item_element.xml
+++ b/app/src/main/res/layout/shopping_list_item_element.xml
@@ -2,9 +2,8 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:orientation="horizontal"
     android:layout_width="match_parent"
-    android:layout_height="wrap_content"
-    android:background="@color/itemBackground"
-    android:minHeight="60dp"
+    android:layout_height="60dp"
+    android:background="@drawable/rectangle_rounded_all"
     android:layout_marginBottom="2dp"
     android:layout_marginTop="2dp"
     android:weightSum="12">
@@ -25,6 +24,7 @@
         android:layout_weight="7"
         android:singleLine="true"
         android:longClickable="true"
+        android:imeOptions="actionNext"
         />
 
 
