--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -13,6 +13,7 @@
     <color name="rvItemsBackground">#cbe8ba</color>
     <color name="checkBoxBackground">#d7d6cd</color>
     <color name="mainActivityBackground">#4a3b72</color>
+    <color name="menuBackground">#33691e</color>
 
 
 
