--- a/app/src/main/res/layout/sms_layout.xml
+++ b/app/src/main/res/layout/sms_layout.xml
@@ -10,7 +10,7 @@
         android:orientation="horizontal"
         android:layout_width="match_parent"
         android:layout_height="0dp"
-        android:layout_weight="1"
+        android:layout_weight="2"
         android:weightSum="100">
 
         <LinearLayout
@@ -31,6 +31,7 @@
                 android:id="@+id/txtPhoneNo"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
+                android:minHeight="30dp"
                 android:inputType="phone"
                 android:textColor="#111111"/>
         </LinearLayout>
@@ -59,7 +60,7 @@
         android:layout_height="0dp"
         android:gravity="top"
         android:textColor="#111111"
-        android:layout_weight="7" />
+        android:layout_weight="6" />
     <Button
         android:id="@+id/btnSendSMS"
         android:layout_width="match_parent"
