--- a/app/src/main/res/menu/menu_my.xml
+++ b/app/src/main/res/menu/menu_my.xml
@@ -1,20 +1,14 @@
 <?xml version="1.0" encoding="utf-8"?>
 <menu xmlns:android="http://schemas.android.com/apk/res/android">
 
-    <group android:checkableBehavior="single">
-        <item
-            android:id="@+id/nav_camara"
-            android:icon="@android:drawable/ic_menu_camera"
-            android:title="Import"/>
 
-    </group>
-
-    <item android:title="Communicate">
+    <item android:title="">
         <menu>
             <item
-                android:id="@+id/nav_send"
+                android:id="@+id/about"
                 android:icon="@android:drawable/ic_menu_send"
-                android:title="Send"/>
+                android:title="@string/drawer_item_about"
+                />
         </menu>
     </item>
 
