--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -33,7 +33,7 @@
 
     <style name="dlgTitleText" >
 
-        <item name="android:textColor">#0d25f8</item>
+        <item name="android:textColor">#4a3b72</item>
         <item name="android:textSize">18sp</item>
         <item name="android:textStyle">bold</item>
     </style>
